--- a/src/view/page_a.sass
+++ b/src/view/page_a.sass
@@ -10,11 +10,12 @@
             .cnt-ctrl
                 color: #000000
                 border-radius: 50%
+                border: 1px solid #aaaaaa
                 width: 30px
-                height 30px
-                display inline-block
-                line-height 28px
-                text-align center
-                cursor pointer
+                height: 30px
+                display: inline-block
+                line-height: 28px
+                text-align: center
+                cursor: pointer
         .total-price
             color: red
